[package]
name = "ufo-r-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ufo_r_host"
crate-type = ["dylib", "staticlib"]

[build-dependencies]
cbindgen = "^0.21"

[dependencies]
ufo_ipc = { git = "https://github.com/electroCutie/ufo_ipc", branch = "main" }
libc = "0.2.80"