[package]
name = "ufo-r-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ufo_r_host"
crate-type = ["dylib", "staticlib"]

[build-dependencies]
cbindgen = "^0.21"

[dependencies]
# git = "https://github.com/ufo-org/ufo_ipc", 
# branch = "main" 
ufo_ipc = { path = "../ufo_ipc" }
libc = "0.2.80"